Fix responsiveness on smaller screen by fixing height

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -54,7 +54,7 @@ of those sections to manage the look and feel of the site. */
 }
 
 .servicos-section {
-    height: 100%;
+    /*height: 100%;*/
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
@@ -62,15 +62,14 @@ of those sections to manage the look and feel of the site. */
 }
 
 .video-section {
-    height: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
 }
 
 .sobre-section {
-    height: 100%;
     padding-top: 100px;
+    padding-bottom: 100px;
     text-align: center;
     background: #eee;
 }
@@ -83,8 +82,8 @@ of those sections to manage the look and feel of the site. */
 }
 
 .contato-section {
-    height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     text-align: center;
     background: #eee;
 }
